# openworship

./: .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  marketing.yml
apps/desktop/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: artifacts.rs  backgrounds.rs  backup.rs  branch_sync.rs  claude_api.rs  cloud_sync.rs  commands.rs  crash_reporting.rs  detection.rs  display_window.rs  email.rs  identity.rs  keychain.rs  lib.rs  service.rs  settings.rs  slide_import.rs  slides.rs  songs.rs  state.rs  summaries.rs  tutorial.rs  updater.rs
apps/marketing/: package.json
apps/marketing/app/: globals.css  layout.tsx  page.tsx
apps/marketing/app/docs/: page.tsx
apps/marketing/app/download/: page.tsx
apps/marketing/app/features/: page.tsx
apps/marketing/components/home/: audiences-section.tsx  console-section.tsx  content-types-section.tsx  cta-section.tsx  hero-section.tsx  how-it-works-section.tsx  live-demo.tsx  modes-section.tsx  numbers-section.tsx  problem-section.tsx  service-plan-section.tsx
apps/marketing/components/layout/: brand-mark.tsx  footer.tsx  nav.tsx  theme-toggle.tsx
apps/marketing/components/ui/: button.tsx  eyebrow.tsx
apps/web/: components.json  eslint.config.js  index.html  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: display.spec.ts  navigation.spec.ts  onboarding.spec.ts  operator.spec.ts  speaker.spec.ts
apps/web/playwright-report/: index.html
apps/web/src/: App.test.tsx  App.tsx  test-setup.ts  vitest.d.ts
apps/web/src/components/: BroadcastModeControl.tsx  ContentPanel.test.tsx  ContentPanel.tsx  DetectionQueue.test.tsx  DetectionQueue.tsx  ModeBar.test.tsx  ModeBar.tsx  ModeToolbar.test.tsx  ModeToolbar.tsx  SchedulePanel.test.tsx  SchedulePanel.tsx  ScriptureSearch.test.tsx  ScriptureSearch.tsx  SettingsModal.tsx  ShareDialog.test.tsx  ShareDialog.tsx  SongLibrary.test.tsx  SongLibrary.tsx  SplashScreen.tsx  SummaryPanel.test.tsx  SummaryPanel.tsx  TitleBar.tsx  TranscriptPanel.test.tsx  TranscriptPanel.tsx  UpdateBanner.tsx
apps/web/src/components/artifacts/: ArtifactContextMenu.tsx  ArtifactGrid.tsx  ArtifactIcons.tsx  ArtifactList.tsx  ArtifactModals.tsx  ArtifactPreviewPanel.tsx  ArtifactSyncCells.tsx  ArtifactToolbar.tsx  ArtifactsSidebar.tsx
apps/web/src/components/display/: DisplayContent.test.tsx  DisplayContent.tsx
apps/web/src/components/operator/: ArtifactsScreen.tsx  AssetsScreen.test.tsx  AssetsScreen.tsx  CommandPalette.test.tsx  CommandPalette.tsx  DisplayScreen.test.tsx  DisplayScreen.tsx  LibraryScreen.test.tsx  LibraryScreen.tsx  LiveScreen.test.tsx  LiveScreen.tsx  LogsScreen.test.tsx  LogsScreen.tsx  PlanScreen.test.tsx  PlanScreen.tsx  PreviewScreen.tsx  Rail.test.tsx  Rail.tsx  ResumeBanner.test.tsx  ResumeBanner.tsx  SettingsScreen.tsx  TopBar.test.tsx  TopBar.tsx  TourOverlay.test.tsx  TourOverlay.tsx  WelcomeModal.test.tsx  WelcomeModal.tsx
apps/web/src/hooks/: use-audio-level.test.ts  use-audio-level.ts  use-audio-settings.test.ts  use-audio-settings.ts  use-debounce.test.ts  use-debounce.ts  use-detection-mode.test.ts  use-detection-mode.ts  use-display-background.test.ts  use-display-background.ts  use-display-info.test.ts  use-display-info.ts  use-display-window.test.ts  use-display-window.ts  use-identity.test.ts  use-identity.ts  use-provider-model.test.ts  use-provider-model.ts  use-queue.test.ts  use-queue.ts  use-service-project.test.ts  use-service-project.ts  use-stt-status.test.ts  use-stt-status.ts  use-tauri-event.test.ts  use-tauri-event.ts  use-theme.test.ts  use-theme.ts  use-transcript.test.ts  use-transcript.ts  use-translations.test.ts  use-translations.ts  use-tutorial.test.ts  use-tutorial.ts  use-whisper-model.test.ts  use-whisper-model.ts
apps/web/src/lib/: artifact-utils.ts  bible-books.ts  cn.test.ts  sentry.ts  themes.ts  toast.test.ts  toast.ts  types.ts  validated-invoke.ts  websocket.ts
apps/web/src/lib/schemas/: index.ts
apps/web/src/pages/: ArtifactsPage.test.tsx  ArtifactsPage.tsx  DisplayPage.tsx  OnboardingPage.test.tsx  OnboardingPage.tsx  OperatorPage.test.tsx  OperatorPage.tsx  SpeakerPage.test.tsx  SpeakerPage.tsx
apps/web/src/stores/: tour-store.test.ts  tour-store.ts  upload-store.test.ts  upload-store.ts
apps/web/src/styles/: artifacts.css  display.css  global.css  onboarding.css  operator.css  settings.css  speaker.css  tokens.css
crates/ow-audio/: Cargo.toml  PROVIDERS.md
crates/ow-audio/src/: capture.rs  deepgram.rs  deepgram_provider.rs  device_watcher.rs  engine.rs  event.rs  fallback.rs  lib.rs  provider.rs  registry.rs  transcribe.rs  whisper_provider.rs
crates/ow-audio/tests/: whisper_integration.rs
crates/ow-core/: Cargo.toml
crates/ow-core/src/: lib.rs
crates/ow-db/: Cargo.toml
crates/ow-db/src/: lib.rs
crates/ow-detect/: Cargo.toml
crates/ow-detect/src/: lib.rs  parser.rs  pipeline.rs  queue.rs
crates/ow-display/: Cargo.toml
crates/ow-display/src/: lib.rs
crates/ow-embed/: Cargo.toml
crates/ow-embed/src/: lib.rs
crates/ow-search/: Cargo.toml
crates/ow-search/src/: lib.rs
scripts/: build-embedding-index.sh  setup-apple-signing.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/e2e/: .gitignore  README.md  fixtures.ts  package.json  playwright.config.ts  take-screenshots.js  tsconfig.json
tests/e2e/specs/: accessibility.spec.ts  display-page.spec.ts  navigation.spec.ts  offline-mode.spec.ts  onboarding-flow.spec.ts  onboarding.spec.ts  operator-page.spec.ts  operator-screens.spec.ts  scripture-search.spec.ts  slide-import.spec.ts  speaker-page.spec.ts
tests/integration/: Cargo.toml  README.md
tests/integration/src/: detection_search.rs  scripture_pipeline.rs
tools/ow-embed-builder/: Cargo.toml
tools/ow-embed-builder/src/: main.rs
(+138 files in other folders)
