[workspace]
members = [
    "apps/desktop",
    "crates/ow-core",
    "crates/ow-search",
    "crates/ow-audio",
    "crates/ow-display",
    "crates/ow-db",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tantivy = "0.22"
anyhow = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
