[workspace]
members = [
    "apps/desktop",
    "crates/ow-core",
    "crates/ow-search",
    "crates/ow-audio",
    "crates/ow-display",
    "crates/ow-db",
    "crates/ow-embed",
    "tests/integration",
    "tools/ow-embed-builder",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tantivy = "0.22"
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }
sha2 = "0.10"
hmac = "0.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
