[package]
name = "openworship-desktop"
version = "0.0.1"
edition = "2021"

[lib]
name = "openworship_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
ow-display = { path = "../../crates/ow-display" }

