[package]
name = "openworship-desktop"
version = "0.0.1"
edition = "2021"

[lib]
name = "openworship_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Enable real Whisper.cpp transcription (requires model at runtime).
whisper = ["ow-audio/whisper"]
# Enable CoreML acceleration on Apple Silicon.
coreml = ["ow-audio/coreml"]
# Enable Deepgram online streaming STT.
deepgram = ["ow-audio/deepgram"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ow-display = { path = "../../crates/ow-display" }
ow-db = { path = "../../crates/ow-db" }
ow-search = { path = "../../crates/ow-search" }
ow-audio = { path = "../../crates/ow-audio" }
ow-core = { path = "../../crates/ow-core" }
