[package]
name = "openworship-desktop"
version = "0.0.1"
edition = "2021"

[lib]
name = "openworship_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["whisper", "deepgram"]
# Enable real Whisper.cpp transcription (requires model at runtime).
whisper = ["ow-audio/whisper"]
# Enable CoreML acceleration on Apple Silicon.
coreml = ["ow-audio/coreml"]
# Enable Deepgram online streaming STT.
deepgram = ["ow-audio/deepgram"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ow-display = { path = "../../crates/ow-display" }
ow-db = { path = "../../crates/ow-db" }
ow-search = { path = "../../crates/ow-search" }
ow-audio = { path = "../../crates/ow-audio" }
ow-core = { path = "../../crates/ow-core" }
ow-embed = { path = "../../crates/ow-embed" }
keyring = "3"
rusqlite = { workspace = true }
mime_guess = "2"
reqwest = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
lettre = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"
tauri-plugin-dialog = "2.7.0"

# Slide import — PPTX/PDF parsing and text extraction
zip = "2"
quick-xml = "0.37"
lopdf = "0.34"
# Backup — archive creation/extraction (required by backup.rs)
flate2 = "1"
tar = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "panic", "reqwest", "rustls"] }
log = "0.4"
