[package]
name = "ow-audio"
version = "0.0.1"
edition = "2021"

[features]
default = []
# Enable real Whisper.cpp transcription (requires model file at runtime).
# When disabled, only the mock transcriber is available — used in CI and tests.
whisper = ["dep:whisper-rs"]
# Enable CoreML acceleration on Apple Silicon (macOS only).
coreml = ["whisper", "whisper-rs/coreml"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
cpal = "0.15"
ringbuf = "0.4"

# Optional: only compiled when the `whisper` feature is enabled.
whisper-rs = { version = "0.14", optional = true }
