[package]
name = "ow-audio"
version = "0.0.1"
edition = "2021"

[features]
default = []
# Enable real Whisper.cpp transcription (requires model file at runtime).
# When disabled, only the mock transcriber is available — used in CI and tests.
whisper = ["dep:whisper-rs"]
# Enable CoreML acceleration on Apple Silicon (macOS only).
coreml = ["whisper", "whisper-rs/coreml"]
# Enable Deepgram online streaming STT via WebSocket.
deepgram = ["dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
cpal = "0.15"
ringbuf = "0.4"

# Optional: only compiled when the `whisper` feature is enabled.
whisper-rs = { version = "0.14", optional = true }

# Optional: only compiled when the `deepgram` feature is enabled.
tokio-tungstenite = { workspace = true, optional = true, features = ["native-tls"] }
futures-util = { workspace = true, optional = true }
